--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "author": "Maxssobolev",
   "dependencies": {
+    "axios": "^1.5.1",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
