--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "author": "Maxssobolev",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.5.1",
     "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.16.0",
     "typescript": "^4.4.2"
   },
