--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.16.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -18,6 +18,10 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.22.15",
     "@stud-log/news-types": "^1.0.36",
+    "@stylistic/eslint-plugin": "^1.6.2",
+    "@stylistic/eslint-plugin-js": "^1.6.2",
+    "@stylistic/eslint-plugin-jsx": "^1.6.2",
+    "@stylistic/eslint-plugin-ts": "^1.6.2",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
