--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.5.1",
+    "million": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,7 +15,7 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@stud-log/news-types": "^1.0.40",
+    "@stud-log/news-types": "^1.1.0",
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
