--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "Maxssobolev",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "antd": "^5.15.2",
     "axios": "^1.5.1",
+    "framer-motion": "^11.0.12",
     "million": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
@@ -15,11 +17,11 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@stud-log/news-types": "^1.1.0",
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.22.15",
+    "@stud-log/news-types": "^1.1.0",
     "@stylistic/eslint-plugin": "^1.6.2",
     "@stylistic/eslint-plugin-js": "^1.6.2",
     "@stylistic/eslint-plugin-jsx": "^1.6.2",
