--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,4 +21,7 @@
     "source.fixAll.eslint": "explicit",
     "source.fixAll.stylelint": "explicit"
   },
+  "cSpell.words": [
+    "Formik"
+  ],
 }
