--- a/package.json
+++ b/package.json
@@ -7,21 +7,25 @@
     "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.15.2",
     "axios": "^1.5.1",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.12",
     "million": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.16.0",
-    "typescript": "^4.9.5"
+    "react-toastify": "^10.0.4",
+    "typescript": "^4.9.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@stud-log/news-types": "^1.1.22",
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.22.15",
-    "@stud-log/news-types": "^1.1.0",
     "@stylistic/eslint-plugin": "^1.6.2",
     "@stylistic/eslint-plugin-js": "^1.6.2",
     "@stylistic/eslint-plugin-jsx": "^1.6.2",
