--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "author": "Maxssobolev",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.2.1",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.15.2",
     "axios": "^1.5.1",
@@ -17,15 +19,16 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^10.0.4",
+    "swr": "^2.2.5",
     "typescript": "^4.9.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@stud-log/news-types": "^1.1.22",
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.22.15",
+    "@stud-log/news-types": "^1.1.22",
     "@stylistic/eslint-plugin": "^1.6.2",
     "@stylistic/eslint-plugin-js": "^1.6.2",
     "@stylistic/eslint-plugin-jsx": "^1.6.2",
