--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "node_modules"
   ],
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2015",
     "lib": [
       "dom",
       "dom.iterable",
