--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "author": "Maxssobolev",
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@ckeditor/ckeditor5-build-classic": "^41.2.1",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.15.2",
     "axios": "^1.5.1",
+    "emoji-picker-react": "^4.9.2",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.12",
+    "interweave": "^13.1.0",
     "million": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
@@ -24,11 +27,11 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@stud-log/news-types": "^1.1.28",
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.22.15",
-    "@stud-log/news-types": "^1.1.22",
     "@stylistic/eslint-plugin": "^1.6.2",
     "@stylistic/eslint-plugin-js": "^1.6.2",
     "@stylistic/eslint-plugin-jsx": "^1.6.2",
