--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "@ant-design/icons": "^5.3.6",
     "@ckeditor/ckeditor5-build-classic": "^41.2.1",
     "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/list": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tippyjs/react": "^4.2.6",
     "antd": "^5.15.2",
     "axios": "^1.5.1",
     "emoji-picker-react": "^4.9.2",
@@ -23,15 +28,16 @@
     "react-router-dom": "^6.16.0",
     "react-toastify": "^10.0.4",
     "swr": "^2.2.5",
+    "tippy.js": "^6.3.7",
     "typescript": "^4.9.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@stud-log/news-types": "^1.1.28",
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.22.15",
+    "@stud-log/news-types": "^1.1.28",
     "@stylistic/eslint-plugin": "^1.6.2",
     "@stylistic/eslint-plugin-js": "^1.6.2",
     "@stylistic/eslint-plugin-jsx": "^1.6.2",
