--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "million": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.0",
@@ -33,7 +34,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@stud-log/news-types": "^1.1.37",
+    "@stud-log/news-types": "^1.1.38",
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
@@ -49,6 +50,7 @@
     "@types/jest": "^29.5.5",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.0.0",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
