--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-API_URL=http://localhost:8000
+API_URL=https://api.studlog.ru
 EMAIL=studlog.help@yandex.ru
-THIS_URL=http://localhost:3000
+THIS_URL=https://studlog.ru
