--- a/package.json
+++ b/package.json
@@ -28,17 +28,18 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^10.0.4",
+    "socket.io-client": "^4.7.5",
     "swr": "^2.2.5",
     "tippy.js": "^6.3.7",
     "typescript": "^4.9.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@stud-log/news-types": "^1.1.38",
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.22.15",
+    "@stud-log/news-types": "^1.1.38",
     "@stylistic/eslint-plugin": "^1.6.2",
     "@stylistic/eslint-plugin-js": "^1.6.2",
     "@stylistic/eslint-plugin-jsx": "^1.6.2",
